--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,9 @@
 
 en:
   hello: "Hello world"
+  views:
+    pagination:
+      previous: "&lt;"
+      next: "&gt;"
+      first: "&laquo;"
+      last: "&raquo;"
